2003-05-11  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/zoom-context.c: Removed bogus zoom ui handlers

	* src/sodipodi.c (sodipodi_init): Initialize some shortcuts

	* src/toolbox.c (sp_toolbox_button_clicked): New callback
	(sp_toolbox_button_new_from_verb): New method
	(sp_toolbox_zoom_create): Use verbs

	* src/interface.c (sp_ui_menu_activate): Universal callback
	(sp_ui_menu_append_item_from_verb): New method
	(sp_ui_view_menu): Use verbs for zoom menu items

	* src/event-context.c (sp_event_context_private_root_handler): Use actions for
	certain keycodes

	* src/verbs.c: New file

	* src/verbs.h: New file

	* src/helper/action.c: New file

	* src/helper/action.h: New file

2003-05-07  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-svp-uncross.c (nr_svl_uncross_full): Break slice endpoints if
	there can be potential crossing

2003-05-06  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-svp-render.c (nr_svp_render): Fix some running sum problems

2003-05-04  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-rasterfont.c (nr_rasterfont_generic_glyph_mask_render): Render
	using NRSVP and mask OR
	(nr_rasterfont_ensure_glyph_slot): Build NRSVP

2003-05-03  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/Makefile.am: Removed art-utils.h

	* src/libnr/nr-svp.c (nr_svl_build_finish_segment): New helper
	(nr_svl_build_moveto): Ditto
	(nr_svl_build_lineto): Ditto
	(nr_svl_build_curveto): New helper
	(nr_svl_from_art_vpath): Use NRSVLBuild
	(nr_svl_from_art_bpath): New method

2003-05-02  Lauris Kaplinski  <lauris@kaplinski.com>

	* sodipodi.desktop.in: Updated by Michael Terry

2003-05-01  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/svg/svg-length.c (sp_svg_number_write_d): Fixed rounding overflow

2003-05-01  Christian Schaller <Uraeus@gnome.org>
	* Fixed up desktop.in file to conform to latest freedesktop standard
	* Fixed up spec.in file to actually work
	* Added missing extensions-skeleton.h to makefile