@@ -26,7 +26,10 @@
 #include "dropper-context.h"
 
 #include "sodipodi-private.h"
+#include "document.h"
 #include "desktop.h"
+#include "selection-chemistry.h"
+#include "shortcuts.h"
 
 #include "verbs.h"
 
@@ -39,47 +42,6 @@ sp_verb_get_action (unsigned int verb)
 {
 	if (!verb_actions) sp_verbs_init ();
 	return &verb_actions[verb];
-}
-
-static GHashTable *scdict = NULL;
-
-void
-sp_shortcut_set_verb (unsigned int shortcut, unsigned int verb, unsigned int primary)
-{
-	unsigned int ex;
-	if (!scdict) scdict = g_hash_table_new (NULL, NULL);
-	ex = (unsigned int) g_hash_table_lookup (scdict, (void *) shortcut);
-	if (ex != verb) g_hash_table_insert (scdict, (void *) shortcut, (void *) verb);
-	if (primary) {
-		SPAction *action;
-		action = sp_verb_get_action (verb);
-		if (action && (shortcut != action->shortcut)) {
-			sp_action_set_shortcut (action, shortcut);
-		}
-	}
-}
-
-void
-sp_shortcut_remove_verb (unsigned int shortcut)
-{
-	unsigned int ex;
-	if (!scdict) return;
-	ex = (unsigned int) g_hash_table_lookup (scdict, (void *) shortcut);
-	if (ex) {
-		SPAction *action;
-		g_hash_table_insert (scdict, (void *) shortcut, (void *) 0);
-		action = sp_verb_get_action (ex);
-		if (action && (action->shortcut)) {
-			sp_action_set_shortcut (action, 0);
-		}
-	}
-}
-
-unsigned int
-sp_shortcut_get_verb (unsigned int shortcut)
-{
-	if (!scdict) return 0;
-	return (unsigned int) g_hash_table_lookup (scdict, (void *) shortcut);;
 }
 
 static void
@@ -210,11 +172,48 @@ sp_verb_action_zoom_perform (SPAction *action, void *data)
 	}
 }
 
+static void
+sp_verb_action_edit_perform (SPAction *action, void *data)
+{
+	SPDesktop *dt;
+
+	dt = SP_ACTIVE_DESKTOP;
+	if (!dt) return;
+
+	switch ((int) data) {
+	case SP_VERB_EDIT_UNDO:
+		sp_document_undo (SP_DT_DOCUMENT (dt));
+		break;
+	case SP_VERB_EDIT_REDO:
+		sp_document_redo (SP_DT_DOCUMENT (dt));
+		break;
+	case SP_VERB_EDIT_CUT:
+		sp_selection_cut (NULL);
+		break;
+	case SP_VERB_EDIT_COPY:
+		sp_selection_copy (NULL);
+		break;
+	case SP_VERB_EDIT_PASTE:
+		sp_selection_paste (NULL);
+		break;
+	case SP_VERB_EDIT_DELETE:
+		sp_selection_delete (NULL, NULL);
+		break;
+	case SP_VERB_EDIT_DUPLICATE:
+		sp_selection_duplicate (NULL, NULL);
+		break;
+	default:
+		break;
+	}
+}
+
 static SPActionEventVector action_ctx_vector = {{NULL}, sp_verb_action_ctx_perform, NULL, sp_verb_action_set_shortcut};
 static SPActionEventVector action_zoom_vector = {{NULL}, sp_verb_action_zoom_perform, NULL, sp_verb_action_set_shortcut};
+static SPActionEventVector action_edit_vector = {{NULL}, sp_verb_action_edit_perform, NULL, sp_verb_action_set_shortcut};
 
 #define SP_VERB_IS_CONTEXT(v) ((v >= SP_VERB_CONTEXT_SELECT) && (v <= SP_VERB_CONTEXT_DROPPER))
 #define SP_VERB_IS_ZOOM(v) ((v >= SP_VERB_ZOOM_IN) && (v <= SP_VERB_ZOOM_SELECTION))
+#define SP_VERB_IS_EDIT(v) ((v >= SP_VERB_EDIT_UNDO) && (v <= SP_VERB_EDIT_DUPLICATE))
 
 typedef struct {
 	unsigned int code;
@@ -250,6 +249,14 @@ static const SPVerbActionDef props[] = {
 	{SP_VERB_ZOOM_PAGE, "ZoomPage", N_("Page"), N_("Fit the whole page into window"), "zoom_page"},
 	{SP_VERB_ZOOM_DRAWING, "ZoomDrawing", N_("Drawing"), N_("Fit the whole drawing into window"), "zoom_draw"},
 	{SP_VERB_ZOOM_SELECTION, "ZoomSelection", N_("Selection"), N_("Fit the whole selection into window"), "zoom_select"},
+	/* Edit */
+	{SP_VERB_EDIT_UNDO, "EditUndo", N_("Undo"), N_("Revert last action"), "edit_undo"},
+	{SP_VERB_EDIT_REDO, "EditRedo", N_("Redo"), N_("Do again undone action"), "edit_redo"},
+	{SP_VERB_EDIT_CUT, "EditCut", N_("Cut"), N_("Cut selected objects to clipboard"), "edit_cut"},
+	{SP_VERB_EDIT_COPY, "EditCopy", N_("Copy"), N_("Copy selected objects to clipboard"), "edit_copy"},
+	{SP_VERB_EDIT_PASTE, "EditPaste", N_("Paste"), N_("Paste objects from clipboard"), "edit_paste"},
+	{SP_VERB_EDIT_DELETE, "EditDelete", N_("Delete"), N_("Delete selected objects"), "edit_delete"},
+	{SP_VERB_EDIT_DUPLICATE, "EditDuplicate", N_("Duplicate"), N_("Duplicate selected objects"), "edit_duplicate"},
 	/* Footer */
 	{SP_VERB_LAST, NULL, NULL, NULL, NULL}
 };
@@ -271,6 +278,11 @@ sp_verbs_init (void)
 		} else if (SP_VERB_IS_ZOOM (v)) {
 			nr_active_object_add_listener ((NRActiveObject *) &verb_actions[v],
 						       (NRObjectEventVector *) &action_zoom_vector,
+						       sizeof (SPActionEventVector),
+						       (void *) v);
+		} else if (SP_VERB_IS_EDIT (v)) {
+			nr_active_object_add_listener ((NRActiveObject *) &verb_actions[v],
+						       (NRObjectEventVector *) &action_edit_vector,
 						       sizeof (SPActionEventVector),
 						       (void *) v);
 		}
