@@ -1,3 +1,12 @@
+2003-05-12  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/text-context.c (sp_text_context_forget_text): Set object to
+	NULL before destroying, so resulting selection::changed does not mess up
+
+	* src/selection-chemistry.c: Removed undo and redo frontends
+
+	* src/shortcuts.c: Moved shortcut code here
+
 2003-05-11  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/zoom-context.c: Removed bogus zoom ui handlers
